[gd_scene load_steps=2 format=3 uid="uid://elel2ujltbn5"]

[ext_resource type="Script" path="res://new_host.gd" id="1_tdpeu"]

[node name="Node" type="Node"]
script = ExtResource("1_tdpeu")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="load" type="Button" parent="Control"]
layout_mode = 0
offset_left = 496.0
offset_top = 320.0
offset_right = 656.0
offset_bottom = 360.0
text = "<LOAD_SAVE>"

[node name="new_game" type="Button" parent="Control"]
layout_mode = 0
offset_left = 496.0
offset_top = 256.0
offset_right = 656.0
offset_bottom = 296.0
text = "<NEW_GAME>"

[node name="back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 576.0
offset_right = 160.0
offset_bottom = 616.0
text = "<BACK>"

[node name="load_manu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="load_manu"]
layout_mode = 0
offset_left = 416.0
offset_top = 192.0
offset_right = 736.0
offset_bottom = 448.0
color = Color(0.0807833, 0.0807833, 0.0807833, 1)

[node name="load_out" type="Button" parent="load_manu"]
layout_mode = 0
offset_left = 488.0
offset_top = 240.0
offset_right = 664.0
offset_bottom = 280.0
text = "<LOAD_FROM_FILE>"

[node name="load_in" type="Button" parent="load_manu"]
layout_mode = 0
offset_left = 488.0
offset_top = 312.0
offset_right = 664.0
offset_bottom = 352.0
text = "<LOAD_ON_SYSTEM>"

[node name="back" type="Button" parent="load_manu"]
layout_mode = 0
offset_left = 432.0
offset_top = 392.0
offset_right = 536.0
offset_bottom = 432.0
text = "<BACK>"

[node name="load_find" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="load_find"]
layout_mode = 0
offset_left = 416.0
offset_top = 176.0
offset_right = 736.0
offset_bottom = 464.0
color = Color(0.0807833, 0.0807833, 0.0807833, 1)

[node name="save1" type="Button" parent="load_find"]
layout_mode = 0
offset_left = 488.0
offset_top = 200.0
offset_right = 664.0
offset_bottom = 240.0
text = "<SAVE 1>"

[node name="back" type="Button" parent="load_find"]
layout_mode = 0
offset_left = 432.0
offset_top = 408.0
offset_right = 536.0
offset_bottom = 448.0
text = "<BACK>"

[node name="save2" type="Button" parent="load_find"]
layout_mode = 0
offset_left = 488.0
offset_top = 272.0
offset_right = 664.0
offset_bottom = 312.0
text = "<SAVE 2>"

[node name="save3" type="Button" parent="load_find"]
layout_mode = 0
offset_left = 488.0
offset_top = 336.0
offset_right = 664.0
offset_bottom = 376.0
text = "<SAVE 3>"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(400, 500)
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="Control/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Control/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="load_manu/load_out" to="." method="_on_load_out_pressed"]
[connection signal="pressed" from="load_manu/load_in" to="." method="_on_load_in_pressed"]
[connection signal="pressed" from="load_manu/back" to="." method="_on_back_in_load_pressed"]
[connection signal="pressed" from="load_find/back" to="." method="_on_back_find_pressed"]
